[gd_scene load_steps=5 format=3 uid="uid://345tqea6y1uh"]

[ext_resource type="Texture2D" uid="uid://c684xq6fms7vu" path="res://art/ui/financial_icon.png" id="1_4rq0u"]
[ext_resource type="Script" path="res://scenes/components/participant_row.gd" id="1_q3b5i"]
[ext_resource type="Theme" uid="uid://crjtfys55hclx" path="res://scenes/theme.tres" id="2_r15k0"]
[ext_resource type="Texture2D" uid="uid://x6nosdli7ux" path="res://art/ui/reward_icons/coffee.png" id="3_hcyl1"]

[node name="participant_row" type="HBoxContainer" node_paths=PackedStringArray("participant_name", "participant_address", "treasure_label", "details_button", "reward_button")]
offset_right = 995.0
offset_bottom = 29.0
script = ExtResource("1_q3b5i")
participant_name = NodePath("name_label")
participant_address = NodePath("address_label")
treasure_label = NodePath("treasure_label")
details_button = NodePath("details_button")
reward_button = NodePath("reward_button")

[node name="avatar" type="TextureRect" parent="."]
custom_minimum_size = Vector2i(100, 10)
offset_top = 6.0
offset_right = 100.0
offset_bottom = 22.0
size_flags_horizontal = 8
size_flags_vertical = 4
texture = ExtResource("1_4rq0u")
stretch_mode = 2

[node name="name_label" type="Label" parent="."]
custom_minimum_size = Vector2i(200, 0)
offset_left = 104.0
offset_right = 304.0
offset_bottom = 29.0
theme = ExtResource("2_r15k0")
text = "Christian Grewell"
vertical_alignment = 1
clip_text = true
text_overrun_behavior = 3

[node name="address_label" type="Label" parent="."]
clip_contents = true
custom_minimum_size = Vector2i(500, 0)
offset_left = 308.0
offset_right = 808.0
offset_bottom = 29.0
theme = ExtResource("2_r15k0")
text = "0x556E1fE6491036be98023B714390f1d4940Aaf45"
vertical_alignment = 1
text_overrun_behavior = 3

[node name="treasure_label" type="Label" parent="."]
custom_minimum_size = Vector2i(100, 0)
offset_left = 812.0
offset_right = 912.0
offset_bottom = 29.0
theme = ExtResource("2_r15k0")
text = "1.123323ETH"
vertical_alignment = 1
text_overrun_behavior = 3

[node name="details_button" type="Button" parent="."]
offset_left = 916.0
offset_right = 999.0
offset_bottom = 29.0
size_flags_vertical = 4
focus_mode = 0
theme = ExtResource("2_r15k0")
theme_override_font_sizes/font_size = 24
text = "DETAILS"

[node name="reward_button" type="Button" parent="."]
offset_left = 1003.0
offset_right = 1101.0
offset_bottom = 29.0
size_flags_vertical = 4
focus_mode = 0
theme = ExtResource("2_r15k0")
theme_override_font_sizes/font_size = 24
text = "REWARD"
icon = ExtResource("3_hcyl1")
alignment = 0
